Setup Auth client side and minor fixes

--- a/app/globals.css
+++ b/app/globals.css
@@ -56,7 +56,8 @@ body {
 }
 
 .hero-banner-font{
-  font-family: var(--font-keepcalm);
+  font-family: var(--font-robotoCondensed);
+  font-weight: bold;
 }
 
 @layer utilities {
