--- a/app/globals.css
+++ b/app/globals.css
@@ -16,14 +16,15 @@
   }
 }
 
-body{
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
+/*body{*/
+/*  min-height: 100vh;*/
+/*  display: flex;*/
+/*  flex-direction: column;*/
+/*}*/
 
 html{
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 *{
@@ -36,6 +37,7 @@ body {
   color: rgb(var(--foreground-rgb));
   background: #2a2a2a;
   font-family: var(--font-keepcalm);
+  overflow-x: hidden;
 }
 
 /*header {*/
@@ -45,6 +47,18 @@ body {
 
 .wrap {
   max-width: 1600px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.wrap-header {
+  max-width: 1920px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.wrap-forum{
+  max-width: 1400px;
   width: 100%;
   margin: 0 auto;
 }
